ncc/testsuite/negative/void-parm.n
module M
{
  public foo (_ : void) : void // E: has void argument
  {
  }

  public bar (_ : System.Void) : void // E: has void argument
  {
  }
 
  public Main () : void // OK
  {
  }
}
